初步实现潜能激发系统，并增加部分角色潜能示例。